--- a/css/custom.scss
+++ b/css/custom.scss
@@ -2,13 +2,21 @@
 
 $lb-w: 1020px;
 $lb-h: (($lb-w / 4) * 3);
-@mixin test($myColor) {
-	outline: 1px solid pink;
-	* {outline: 1px solid $myColor;}
+@mixin test($color1, $color2) {
+	outline: 1px solid $color1;
+	* {outline: 1px solid $color2;}
 }
+@mixin wh-percent ($w, $h) {
+	width: $w;
+	height: $h;
+}
+html, body {width: 100%; height: 100%;}
+// temporary background
+body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 #main-frame {
-	@include test(red);
-	background-color: rgba(0, 0, 0, 0.25);
+	// Remove when done testing
+	@include test(white, red);
+	background-color: #CCC;
 	width: $lb-w;
 	height: $lb-h;
 	display: block;
@@ -19,42 +27,113 @@ $lb-h: (($lb-w / 4) * 3);
 	position: relative;
 	width: 100%;
 	height: 100%;
-	> div.hit-targets {
+	> div {
 		position: absolute;
-		min-width: 10px;
-		min-height: 10px;
-		> img {
-			position: absolute;
-			min-width: 100px;
-			min-height: 100px;
-			background-repeat: no-repeat;
-			background-position: center;
-		}
-		> img.on {
-			display: block;
-			z-index: 100;
-		}
-		> img.off {
-			display: none;
-			z-index: 0;
-		}
+		min-width: 100px;
+		min-height: 100px;
 	}
 }
-.dog-type-l {
-	background-image: url(http://placehold.it/100x100/&text=dog-l);
-}
-.dog-type-m {
-	background-image: url(http://placehold.it/100x100/&text=dog-m);
-}
-.dog-type-s {
-	background-image: url(http://placehold.it/100x100/&text=dog-s);
-}
-.cat-type-m {
-	background-image: url(http://placehold.it/100x100/&text=cat);
-}
-.com-type-m {
-	background-image: url(http://placehold.it/100x100/&text=comm);
-}
+// Splash Screen
 
+
+// Main Menu
+#game-menu {
+	width: 100%;
+	min-height: 0 !important;
+	> table > tr > td {
+		padding: 10px;
+	}
+	td {font-size: 24px; text-align: center; vertical-align: middle;}
+	// Remove when done testing
+	#pointCounterTable {
+		width: 300px;
+		margin-left: 15px;
+		td {padding: 5px;}
+		#pointCount {text-align: right;}
+		#pointMax {text-align: left;}
+	}
+	@include test(darkgray, white);
+}
+.game-icon {width: 100px; height: 50px;}
+.game-type-save {background-image: url(http://placehold.it/100x50/&text=Save);}
+.game-type-kill {background-image: url(http://placehold.it/100x50/&text=Kill);}
+
+// Background Scene Only
+#background-scene {
+	position: relative;
+	width: 100%; height: 100%;
+	@include test(blue, black);
+	> div {position: absolute;}
+	// Background Dimensions and Positions
+	.environment-transhcan1,
+	.environment-transhcan2 {@include wh-percent(20%, 40%);}
+	.environment-dumpster {
+		@include wh-percent(50%, 60%);
+		@include position( absolute, 30% auto auto 5% );
+	}
+	.environment-transhcan1 {@include position( absolute, 31.5% auto auto 57% );}
+	.environment-transhcan2 {@include position( absolute, 30.5% auto auto 67% );}
+	.environment-bag {
+		@include wh-percent(25%, 35%);
+		@include position( absolute, 50% auto auto 40% );
+	}
+	.environment-manhole {
+		@include wh-percent(30%, 20%);
+		@include position( absolute, 75% auto auto 62% );
+	}
+	// Remove when done testing
+	.environment-dumpster:before {content: 'dumpster';}
+	.environment-transhcan1:before {content: 'transhcan1';}
+	.environment-transhcan2:before {content: 'transhcan2';}
+	.environment-bag:before {content: 'bag';}
+	.environment-manhole:before {content: 'manhole';}
+}
+// Target Assets
+.dog-type-l {background-image: url(http://placehold.it/100x100/&text=dog-l);}
+.dog-type-m {background-image: url(http://placehold.it/100x100/&text=dog-m);}
+.dog-type-s {background-image: url(http://placehold.it/100x100/&text=dog-s);}
+.cat-type-m {background-image: url(http://placehold.it/100x100/&text=cat);}
+.com-type-m {background-image: url(http://placehold.it/100x100/&text=comm);}
+// Target Locations
+.hit-targets {
+	width: auto;
+	//> img {position: absolute;}
+	> img {
+		position: absolute;
+		min-width: 100px;
+		min-height: 100px;
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+	> img.on {
+		display: block;
+		z-index: 100;
+	}
+	> img.off {
+		display: none;
+		z-index: 0;
+	}
+}
+.hit-targets:before {content: attr(name) ''; font-size: 10px;}
+.location-dumpster {
+	@include wh-percent(15%, 15%);
+	@include position(absolute, 40% 0 0 10%);
+}
+.location-trashcan1 {
+	@include wh-percent(15%, 15%);
+	@include position(absolute, 40% 0 0 59%);
+}
+.location-trashcan2 {
+	@include wh-percent(15%, 15%);
+	@include position(absolute, 38% 0 0 69%);
+}
+.location-bag {
+	@include wh-percent(15%, 15%);
+	@include position(absolute, 65% 0 0 35%);
+}
+.location-manhole {
+	@include wh-percent(15%, 15%);
+	@include position(absolute, 79% 0 0 70%);
+}
 
 
