--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,5 +1,6 @@
 @import 'bourbon/dist/_bourbon.scss';
-
+::selection,
+img::selection {background-color: none;}
 $lb-w: 1020px;
 $lb-h: (($lb-w / 4) * 3);
 @mixin test($color1, $color2) {
@@ -27,12 +28,14 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 	position: relative;
 	width: 100%;
 	height: 100%;
+	display: none;
 	> div {
 		position: absolute;
 		min-width: 100px;
 		min-height: 100px;
 	}
 }
+.frame.active {display: block;}
 // Splash Screen
 
 
@@ -40,6 +43,7 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 #game-menu {
 	width: 100%;
 	min-height: 0 !important;
+	z-index: 10;
 	> table > tr > td {
 		padding: 10px;
 	}
@@ -62,14 +66,26 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 #background-scene {
 	position: relative;
 	width: 100%; height: 100%;
+	z-index: 1;
 	@include test(blue, black);
+	background: url(../images/bg-template.jpg) no-repeat;
+	background-size: 1020px ;
 	> div {position: absolute;}
 	// Background Dimensions and Positions
-	.environment-transhcan1,
-	.environment-transhcan2 {@include wh-percent(20%, 40%);}
+	.environment-transhcan1 {
+		@include wh-percent(25%, 40%);
+		background: url(../images/e-trashCan-1.png) no-repeat;
+	}
+	.environment-transhcan2 {
+		@include wh-percent(20%, 40%);
+		background: url(../images/e-trashCan-2.png) no-repeat;
+		background-size: contain;
+	}
 	.environment-dumpster {
-		@include wh-percent(50%, 60%);
-		@include position( absolute, 30% auto auto 5% );
+		// @include wh-percent(50%, 60%);
+		@include wh-percent(510px, 496px);
+		@include position( absolute, 15% auto auto 7% );
+		background: url(../images/e-dumpster.png) no-repeat;
 	}
 	.environment-transhcan1 {@include position( absolute, 31.5% auto auto 57% );}
 	.environment-transhcan2 {@include position( absolute, 30.5% auto auto 67% );}
@@ -89,32 +105,52 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 	.environment-manhole:before {content: 'manhole';}
 }
 // Target Assets
-.dog-type-l {background-image: url(http://placehold.it/100x100/&text=dog-l);}
-.dog-type-m {background-image: url(http://placehold.it/100x100/&text=dog-m);}
-.dog-type-s {background-image: url(http://placehold.it/100x100/&text=dog-s);}
-.cat-type-m {background-image: url(http://placehold.it/100x100/&text=cat);}
-.com-type-m {background-image: url(http://placehold.it/100x100/&text=comm);}
+.dog-type-s, .cat-type-m {background-position: 0px 0px;}
+.dog-type-l {background-position: -10px 0px;}
+.dog-type-l {background-image: url(../images/sprite-dog-large.png);}
+.dog-type-s {background-image: url(../images/sprite-dog-small.png);}
+.cat-type-m {background-image: url(../images/sprite-cat-small.png);}
+
+.hit .dog-type-l {background-position: -132px 0px;}
+.hit .dog-type-s {background-position: -121px 0px;}
+.hit .cat-type-m {background-position: -120px 0px;}
+
+.kill .dog-type-l,
+.kill .dog-type-s,
+.kill .cat-type-m {background-position: -245px 0px;}
+
+.save .dog-type-l {background-position: -355px 0px;}
+.save .dog-type-s {background-position: -350px 0px;}
+.save .cat-type-m {background-position: -347px 0px;}
+
+.saved .dog-type-l {background-position: -475px 0px;}
+.saved .dog-type-s {background-position: -470px 0px;}
+.saved .cat-type-m {background-position: -464px 0px;}
+	// .dog-type-m {background-image: url(http://placehold.it/100x100/&text=dog-s);}
+	// .com-type-m {background-image: url(http://placehold.it/100x100/&text=comm);}
 // Target Locations
 .hit-targets {
 	width: auto;
-	//> img {position: absolute;}
-	> img {
+	> .img {
 		position: absolute;
 		min-width: 100px;
 		min-height: 100px;
 		background-repeat: no-repeat;
-		background-position: center;
+		background-size: 602px 100px;
 	}
-	> img.on {
+	> .img.on {
 		display: block;
 		z-index: 100;
 	}
-	> img.off {
+	> .img.off {
 		display: none;
 		z-index: 0;
 	}
 }
-.hit-targets:before {content: attr(name) ''; font-size: 10px;}
+.hit-targets:before {
+	content: attr(name) '';
+	font-size: 10px;
+}
 .location-dumpster {
 	@include wh-percent(15%, 15%);
 	@include position(absolute, 40% 0 0 10%);
