--- a/css/custom.css
+++ b/css/custom.css
@@ -100,59 +100,71 @@ body {
 }
 #background-scene > div {
   position: absolute;
+  opacity: 0.3;
+  outline: 1px solid pink;
+}
+#background-scene > div.environment-items {
+  background-size: contain;
 }
 #background-scene .environment-transhcan1 {
-  width: 25%;
-  height: 40%;
+  width: 23.6%;
+  height: 30.7%;
+  position: absolute;
+  top: 36%;
+  right: auto;
+  bottom: auto;
+  left: 50.6%;
   background: url(../images/e-trashCan-1.png) no-repeat;
 }
 #background-scene .environment-transhcan2 {
-  width: 20%;
-  height: 40%;
+  width: 15.8%;
+  height: 28.5%;
+  position: absolute;
+  top: 33%;
+  right: auto;
+  bottom: auto;
+  left: 63.3%;
   background: url(../images/e-trashCan-2.png) no-repeat;
-  background-size: contain;
 }
 #background-scene .environment-dumpster {
-  width: 510px;
-  height: 496px;
+  width: 46.1%;
+  height: 61%;
   position: absolute;
-  top: 15%;
+  top: 22%;
   right: auto;
   bottom: auto;
-  left: 7%;
+  left: 8%;
   background: url(../images/e-dumpster.png) no-repeat;
 }
-#background-scene .environment-transhcan1 {
-  position: absolute;
-  top: 31.5%;
-  right: auto;
-  bottom: auto;
-  left: 57%;
-}
-#background-scene .environment-transhcan2 {
-  position: absolute;
-  top: 30.5%;
-  right: auto;
-  bottom: auto;
-  left: 67%;
-}
 #background-scene .environment-bag {
-  width: 25%;
-  height: 35%;
+  width: 17.5%;
+  height: 28%;
   position: absolute;
-  top: 50%;
+  top: 48.5%;
   right: auto;
   bottom: auto;
-  left: 40%;
+  left: 45.8%;
+  background: url(../images/e-trashBag.png) no-repeat;
 }
 #background-scene .environment-manhole {
-  width: 30%;
-  height: 20%;
+  width: 28.5%;
+  height: 19.5%;
   position: absolute;
-  top: 75%;
+  top: 65.5%;
   right: auto;
   bottom: auto;
-  left: 62%;
+  left: 67.5%;
+  background: url(../images/e-manhole.png) no-repeat;
+}
+#background-scene .environment-cardboardBox {
+  width: 21.5%;
+  height: 18.6%;
+  position: absolute;
+  top: 46.9%;
+  right: auto;
+  bottom: auto;
+  left: 73.9%;
+  background: url(../images/e-cardboardBox.png) no-repeat;
 }
 #background-scene .environment-dumpster:before {
   content: 'dumpster';
@@ -169,8 +181,12 @@ body {
 #background-scene .environment-manhole:before {
   content: 'manhole';
 }
+#background-scene .environment-cardboardBox:before {
+  content: 'cardboardbox';
+}
 
-.dog-type-s, .cat-type-m {
+.dog-type-s,
+.cat-type-m {
   background-position: 0px 0px;
 }
 
@@ -234,6 +250,7 @@ body {
 
 .hit-targets {
   width: auto;
+  outline: 1px solid pink !important;
 }
 .hit-targets > .img {
   position: absolute;
@@ -260,48 +277,58 @@ body {
   width: 15%;
   height: 15%;
   position: absolute;
-  top: 40%;
+  top: 25.7%;
   right: 0;
   bottom: 0;
-  left: 10%;
+  left: 20%;
 }
 
 .location-trashcan1 {
   width: 15%;
   height: 15%;
   position: absolute;
-  top: 40%;
+  top: 24.5%;
   right: 0;
   bottom: 0;
-  left: 59%;
+  left: 53%;
 }
 
 .location-trashcan2 {
   width: 15%;
   height: 15%;
   position: absolute;
-  top: 38%;
+  top: 21.3%;
   right: 0;
   bottom: 0;
-  left: 69%;
+  left: 66%;
 }
 
 .location-bag {
   width: 15%;
   height: 15%;
   position: absolute;
-  top: 65%;
+  top: 39%;
   right: 0;
   bottom: 0;
-  left: 35%;
+  left: 49%;
 }
 
 .location-manhole {
   width: 15%;
   height: 15%;
   position: absolute;
-  top: 79%;
+  top: 68%;
   right: 0;
   bottom: 0;
-  left: 70%;
+  left: 73%;
+}
+
+.location-cardboardBox {
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  top: 33%;
+  right: 0;
+  bottom: 0;
+  left: 80%;
 }
