--- a/css/custom.css
+++ b/css/custom.css
@@ -215,153 +215,67 @@ body {
   height: 100%;
   z-index: 1;
   background: url(../images/bg-template.jpg) no-repeat;
-<<<<<<< Updated upstream
-  background-size: 1020px;
-}
-#background-scene * {
-  outline: 1px solid black;
-}
-#background-scene > div {
-  position: absolute;
-  opacity: 0.3;
-  outline: 1px solid pink;
-}
-#background-scene > div.environment-items {
-  background-size: contain;
-}
-#background-scene .environment-transhcan1 {
-  width: 23.6%;
-  height: 30.7%;
-  position: absolute;
-  top: 36%;
-  right: auto;
-  bottom: auto;
-  left: 50.6%;
-  background: url(../images/e-trashCan-1.png) no-repeat;
-}
-#background-scene .environment-transhcan2 {
-  width: 15.8%;
-  height: 28.5%;
-  position: absolute;
-  top: 33%;
-  right: auto;
-  bottom: auto;
-  left: 63.3%;
-  background: url(../images/e-trashCan-2.png) no-repeat;
-}
-#background-scene .environment-dumpster {
-  width: 46.1%;
-  height: 61%;
-  position: absolute;
-  top: 22%;
-  right: auto;
-  bottom: auto;
-  left: 8%;
-  background: url(../images/e-dumpster.png) no-repeat;
-}
-#background-scene .environment-bag {
-  width: 17.5%;
-  height: 28%;
-  position: absolute;
-  top: 48.5%;
-  right: auto;
-  bottom: auto;
-  left: 45.8%;
-  background: url(../images/e-trashBag.png) no-repeat;
-}
-#background-scene .environment-manhole {
-  width: 28.5%;
-  height: 19.5%;
-  position: absolute;
-  top: 65.5%;
-  right: auto;
-  bottom: auto;
-  left: 67.5%;
-  background: url(../images/e-manhole.png) no-repeat;
-}
-#background-scene .environment-cardboardBox {
-  width: 21.5%;
-  height: 18.6%;
-  position: absolute;
-  top: 46.9%;
-  right: auto;
-  bottom: auto;
-  left: 73.9%;
-  background: url(../images/e-cardboardBox.png) no-repeat;
-}
-#background-scene .environment-dumpster:before {
-  content: 'dumpster';
-}
-#background-scene .environment-transhcan1:before {
-  content: 'transhcan1';
-}
-#background-scene .environment-transhcan2:before {
-  content: 'transhcan2';
-}
-#background-scene .environment-bag:before {
-  content: 'bag';
-}
-#background-scene .environment-manhole:before {
-  content: 'manhole';
-}
-#background-scene .environment-cardboardBox:before {
-  content: 'cardboardbox';
-}
-
-.dog-type-s,
-.cat-type-m {
-  background-position: 0px 0px;
-}
-=======
   background-size: 1020px; }
   #background-scene > div {
-    position: absolute; }
+    position: absolute;
+    opacity: 0.3;
+    outline: 1px solid pink; }
+  #background-scene > div.environment-items {
+    background-size: contain; }
   #background-scene .environment-transhcan1 {
-    width: 25%;
-    height: 40%;
+    width: 23.6%;
+    height: 30.7%;
+    position: absolute;
+    top: 36%;
+    right: auto;
+    bottom: auto;
+    left: 50.6%;
     background: url(../images/e-trashCan-1.png) no-repeat; }
   #background-scene .environment-transhcan2 {
-    width: 20%;
-    height: 40%;
-    background: url(../images/e-trashCan-2.png) no-repeat;
-    background-size: contain; }
+    width: 15.8%;
+    height: 28.5%;
+    position: absolute;
+    top: 33%;
+    right: auto;
+    bottom: auto;
+    left: 63.3%;
+    background: url(../images/e-trashCan-2.png) no-repeat; }
   #background-scene .environment-dumpster {
-    width: 510px;
-    height: 496px;
+    width: 46.1%;
+    height: 61%;
     position: absolute;
-    top: 15%;
+    top: 22%;
     right: auto;
     bottom: auto;
-    left: 7%;
+    left: 8%;
     background: url(../images/e-dumpster.png) no-repeat; }
-  #background-scene .environment-transhcan1 {
-    position: absolute;
-    top: 31.5%;
-    right: auto;
-    bottom: auto;
-    left: 57%; }
-  #background-scene .environment-transhcan2 {
-    position: absolute;
-    top: 30.5%;
-    right: auto;
-    bottom: auto;
-    left: 67%; }
   #background-scene .environment-bag {
-    width: 25%;
-    height: 35%;
+    width: 17.5%;
+    height: 28%;
     position: absolute;
-    top: 50%;
+    top: 48.5%;
     right: auto;
     bottom: auto;
-    left: 40%; }
+    left: 45.8%;
+    background: url(../images/e-trashBag.png) no-repeat; }
   #background-scene .environment-manhole {
-    width: 30%;
-    height: 20%;
+    width: 28.5%;
+    height: 19.5%;
     position: absolute;
-    top: 75%;
+    top: 65.5%;
     right: auto;
     bottom: auto;
-    left: 62%; }
+    left: 67.5%;
+    background: url(../images/e-manhole.png) no-repeat; }
+  #background-scene .environment-cardboardBox {
+    width: 21.5%;
+    height: 18.6%;
+    position: absolute;
+    top: 46.9%;
+    right: auto;
+    bottom: auto;
+    left: 73.9%;
+    background: url(../images/e-cardboardBox.png) no-repeat; }
   #background-scene .environment-dumpster:before {
     content: 'dumpster'; }
   #background-scene .environment-transhcan1:before {
@@ -372,10 +286,12 @@ body {
     content: 'bag'; }
   #background-scene .environment-manhole:before {
     content: 'manhole'; }
+  #background-scene .environment-cardboardBox:before {
+    content: 'cardboardbox'; }
 
-.dog-type-s, .cat-type-m {
+.dog-type-s,
+.cat-type-m {
   background-position: 0px 0px; }
->>>>>>> Stashed changes
 
 .dog-type-l {
   background-position: -10px 0px; }
@@ -422,27 +338,8 @@ body {
   background-position: -464px 0px; }
 
 .hit-targets {
-<<<<<<< Updated upstream
   width: auto;
-  outline: 1px solid pink !important;
-}
-.hit-targets > .img {
-  position: absolute;
-  min-width: 100px;
-  min-height: 100px;
-  background-repeat: no-repeat;
-  background-size: 602px 100px;
-}
-.hit-targets > .img.on {
-  display: block;
-  z-index: 100;
-}
-.hit-targets > .img.off {
-  display: none;
-  z-index: 0;
-}
-=======
-  width: auto; }
+  outline: 1px solid pink !important; }
   .hit-targets > .img {
     position: absolute;
     min-width: 100px;
@@ -455,7 +352,6 @@ body {
   .hit-targets > .img.off {
     display: none;
     z-index: 0; }
->>>>>>> Stashed changes
 
 .hit-targets:before {
   content: attr(name) "";
@@ -468,12 +364,7 @@ body {
   top: 25.7%;
   right: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  left: 20%;
-}
-=======
-  left: 10%; }
->>>>>>> Stashed changes
+  left: 20%; }
 
 .location-trashcan1 {
   width: 15%;
@@ -482,12 +373,7 @@ body {
   top: 24.5%;
   right: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  left: 53%;
-}
-=======
-  left: 59%; }
->>>>>>> Stashed changes
+  left: 53%; }
 
 .location-trashcan2 {
   width: 15%;
@@ -496,12 +382,7 @@ body {
   top: 21.3%;
   right: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  left: 66%;
-}
-=======
-  left: 69%; }
->>>>>>> Stashed changes
+  left: 66%; }
 
 .location-bag {
   width: 15%;
@@ -510,12 +391,7 @@ body {
   top: 39%;
   right: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  left: 49%;
-}
-=======
-  left: 35%; }
->>>>>>> Stashed changes
+  left: 49%; }
 
 .location-manhole {
   width: 15%;
@@ -524,8 +400,7 @@ body {
   top: 68%;
   right: 0;
   bottom: 0;
-  left: 73%;
-}
+  left: 73%; }
 
 .location-cardboardBox {
   width: 20%;
@@ -534,11 +409,6 @@ body {
   top: 33%;
   right: 0;
   bottom: 0;
-<<<<<<< Updated upstream
-  left: 80%;
-}
-=======
-  left: 70%; }
+  left: 80%; }
 
 /*# sourceMappingURL=custom.css.map */
->>>>>>> Stashed changes
