--- a/css/custom.scss
+++ b/css/custom.scss
@@ -66,172 +66,8 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 }
 .frame.active {display: block;}
 // Splash Screen
-.frame.start-screen{
-	display:block;
-	background-color:#921A1D;
-	text-align:center;
-	> div {
-		position: relative;
-	}
-	.headline-pic{
-		padding-top: 50px;
-		img{
-			width: 90%;
-		}
-	}
-	.subheadline{
-		width: 60%;
-		padding-top: 30px;
-		font-family: Arial, sans-serif;
-		font-size: 2em;
-		color: #82CCB6;
-		margin:0 auto;
-	}	
-	.subheadline2{
-		padding-top: 10px;
-		font-family: Arial, sans-serif;
-		font-weight: bold;
-		font-size: 1.6em;
-		color: #FFFFFF;
-	}
-	.button-wrapper	{
-		margin-top: -20px;
-	}
-}
 
-.frame.kill-pets, .frame.save-pets{
-	> div {
-		position: relative;
-	}
-	.headline{
-		padding-top: 60px;
-		font-family:Veneer-Three;
-		font-size: 4em;
-		color: #ffffff;
-	}
-	.subheadline{
-		width: 50%;
-		font-family: Arial, sans-serif;
-		font-size: 2em;
-		color: #ffffff;
-		margin:0 auto;
-	}
-	.instruction-points{
-		font-family:Veneer-Three;
-		> div{
-			display: inline-block;
-		}
-		div{
-			color:#ffffff;
-			font-size: 1.2em;
-		}
-		.points{
-			color:#82CCB6;
-			font-size: 2em;
-		}
-	}
-	.button-wrapper	{
-		margin-top: 50px;
-	}
-}
-
-.frame.kill-commissioner, .frame.save-commissioner{
-	> div {
-		position: relative;
-	}
-
-	.subheadline{
-		font-family: Veneer-Three;
-		font-size: 4em;
-		color: #ffffff;
-		margin:0 auto;
-	}	
-	.subheadline2{
-		width: 60%;
-		font-family: Arial, sans-serif;
-		font-size: 2em;
-		color: #ffffff;
-		margin:0 auto;
-	}
-	.button-wrapper	{
-		margin-top: 50px;
-	}
-}
-
-.frame.kill-score, .frame.save-score{
-	> div {
-		position: relative;
-	}
-	.headline{
-		padding-top: 150px;
-		font-family:Arial, sans-serif;
-		font-size: 3em;
-		color: #ffffff;
-	}
-	.score{
-		margin-top: -40px;
-		margin-bottom: 10px;
-		font-family:Veneer-Three;
-		font-size: 6em;
-		color: #ffffff;
-	}
-	.subheadline{
-		width: 50%;
-		font-family: Arial, sans-serif;
-		font-size: 2em;
-		color: #ffffff;
-		margin:0 auto;
-	}
-	.subheadline2{
-		width: 80%;
-		font-family: Arial, sans-serif;
-		font-size: 2em;
-		color: #82CCB6;
-		margin:0 auto;
-	}
-	.button-wrapper	{
-		margin-top: 30px;
-	}
-}
-
-.frame.share{
-	> div {
-		position: relative;
-	}
-	.bodytext{
-		width: 75%;
-		line-height: 1.6em;
-		padding-top: 100px;
-		text-align: left;
-		font-family:Arial, sans-serif;
-		font-size: 1.3em;
-		color: #ffffff;
-		margin:0px auto;
-	}
-	.learn-more{
-		margin-top: 50px;
-	}
-	.button-wrapper	{
-		margin-top: 50px;
-	}
-}
-
-.col-4{
-	width:20%;
-	overflow:hidden;
-	.img-wrapper{
-		height: 229px;
-		width: 315px;
-		margin-left: -53px;
-		text-align: left;
-	}
-	img{
-		position: absolute;
-	}
-}
-.offset-col-2{
-	margin-left:12.5%;
-}
+@import 'frames.scss'
 
 // Main Menu
 #game-menu {
