--- a/css/custom.scss
+++ b/css/custom.scss
@@ -99,6 +99,16 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 		padding-right: 24px;
 	}
 }
+#gameCountdown{
+	width:300px;
+	height:300px;
+	margin-left:366px;
+	margin-top:214px;
+	z-index:1000;
+	color:#921A1D;
+	font-size:300px;
+	font-family:Veneer-Three;
+}
 .game-icon {width: 67px; height: 50px; margin-top: 22px; margin-left: 20px;}
 .game-type-save {background-image: url(http://placehold.it/100x50/&text=Save);}
 .game-type-kill {
