--- a/css/custom.css
+++ b/css/custom.css
@@ -1,169 +1,3 @@
-.start-screen {
-  background-color: #921A1D;
-  text-align: center; }
-  .start-screen > div {
-    position: relative; }
-  .start-screen .headline-pic {
-    padding-top: 50px; }
-    .start-screen .headline-pic img {
-      width: 90%; }
-  .start-screen .subheadline {
-    width: 60%;
-    padding-top: 30px;
-    font-family: Arial, sans-serif;
-    font-size: 2em;
-    color: #82CCB6;
-    margin: 0 auto; }
-  .start-screen .subheadline2 {
-    padding-top: 10px;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    font-size: 1.6em;
-    color: #FFFFFF; }
-  .start-screen .button-wrapper {
-    margin-top: -20px; }
-
-.start-screen.active .headline-pic > img {
-  -webkit-animation: whackEmAll 1s ease-in-out;
-  -moz-animation: whackEmAll 1s ease-in-out;
-  animation: whackEmAll 1s ease-in-out;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  animation-iteration-count: infinite; }
-
-@-webkit-keyframes whackEmAll {
-  0% {
-    -webkit-transform: scale(0.99); }
-  50% {
-    -webkit-transform: scale(1.01); }
-  100% {
-    -webkit-transform: scale(0.99); } }
-@-moz-keyframes whackEmAll {
-  0% {
-    -moz-transform: scale(0.99); }
-  50% {
-    -moz-transform: scale(1.01); }
-  100% {
-    -moz-transform: scale(0.99); } }
-@keyframes whackEmAll {
-  0% {
-    -webkit-transform: scale(0.99);
-    -moz-transform: scale(0.99);
-    -ms-transform: scale(0.99);
-    -o-transform: scale(0.99);
-    transform: scale(0.99); }
-  50% {
-    -webkit-transform: scale(1.01);
-    -moz-transform: scale(1.01);
-    -ms-transform: scale(1.01);
-    -o-transform: scale(1.01);
-    transform: scale(1.01); }
-  100% {
-    -webkit-transform: scale(0.99);
-    -moz-transform: scale(0.99);
-    -ms-transform: scale(0.99);
-    -o-transform: scale(0.99);
-    transform: scale(0.99); } }
-.kill-pets > div, .save-pets > div {
-  position: relative; }
-.kill-pets .headline, .save-pets .headline {
-  padding-top: 60px;
-  font-family: Veneer-Three;
-  font-size: 4em;
-  color: #ffffff; }
-.kill-pets .subheadline, .save-pets .subheadline {
-  width: 50%;
-  font-family: Arial, sans-serif;
-  font-size: 2em;
-  color: #ffffff;
-  margin: 0 auto; }
-.kill-pets .instruction-points, .save-pets .instruction-points {
-  font-family: Veneer-Three; }
-  .kill-pets .instruction-points > div, .save-pets .instruction-points > div {
-    display: inline-block; }
-  .kill-pets .instruction-points div, .save-pets .instruction-points div {
-    color: #ffffff;
-    font-size: 1.2em; }
-  .kill-pets .instruction-points .points, .save-pets .instruction-points .points {
-    color: #82CCB6;
-    font-size: 2em; }
-.kill-pets .button-wrapper, .save-pets .button-wrapper {
-  margin-top: 50px; }
-
-.kill-commissioner > div, .save-commissioner > div {
-  position: relative; }
-.kill-commissioner .subheadline, .save-commissioner .subheadline {
-  font-family: Veneer-Three;
-  font-size: 4em;
-  color: #ffffff;
-  margin: 0 auto; }
-.kill-commissioner .subheadline2, .save-commissioner .subheadline2 {
-  width: 60%;
-  font-family: Arial, sans-serif;
-  font-size: 2em;
-  color: #ffffff;
-  margin: 0 auto; }
-.kill-commissioner .button-wrapper, .save-commissioner .button-wrapper {
-  margin-top: 50px; }
-
-.kill-score > div, .save-score > div {
-  position: relative; }
-.kill-score .headline, .save-score .headline {
-  padding-top: 150px;
-  font-family: Arial, sans-serif;
-  font-size: 3em;
-  color: #ffffff; }
-.kill-score .score, .save-score .score {
-  margin-top: -40px;
-  margin-bottom: 10px;
-  font-family: Veneer-Three;
-  font-size: 6em;
-  color: #ffffff; }
-.kill-score .subheadline, .save-score .subheadline {
-  width: 50%;
-  font-family: Arial, sans-serif;
-  font-size: 2em;
-  color: #ffffff;
-  margin: 0 auto; }
-.kill-score .subheadline2, .save-score .subheadline2 {
-  width: 80%;
-  font-family: Arial, sans-serif;
-  font-size: 2em;
-  color: #82CCB6;
-  margin: 0 auto; }
-.kill-score .button-wrapper, .save-score .button-wrapper {
-  margin-top: 30px; }
-
-.share > div {
-  position: relative; }
-.share .bodytext {
-  width: 75%;
-  line-height: 1.6em;
-  padding-top: 100px;
-  text-align: left;
-  font-family: Arial, sans-serif;
-  font-size: 1.3em;
-  color: #ffffff;
-  margin: 0px auto; }
-.share .learn-more {
-  margin-top: 50px; }
-.share .button-wrapper {
-  margin-top: 50px; }
-
-.col-4 {
-  width: 20%;
-  overflow: hidden; }
-  .col-4 .img-wrapper {
-    height: 229px;
-    width: 315px;
-    margin-left: -53px;
-    text-align: left; }
-  .col-4 img {
-    position: absolute; }
-
-.offset-col-2 {
-  margin-left: 12.5%; }
-
 ::selection,
 img::selection {
   background-color: transparent;
@@ -557,5 +391,171 @@ body {
   /* Standard syntax */
   animation-name: animationCatTypeM;
   animation-duration: 2s; }
+
+.start-screen {
+  background-color: #921A1D;
+  text-align: center; }
+  .start-screen > div {
+    position: relative; }
+  .start-screen .headline-pic {
+    padding-top: 50px; }
+    .start-screen .headline-pic img {
+      width: 90%; }
+  .start-screen .subheadline {
+    width: 60%;
+    padding-top: 30px;
+    font-family: Arial, sans-serif;
+    font-size: 2em;
+    color: #82CCB6;
+    margin: 0 auto; }
+  .start-screen .subheadline2 {
+    padding-top: 10px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    font-size: 1.6em;
+    color: #FFFFFF; }
+  .start-screen .button-wrapper {
+    margin-top: -20px; }
+
+.start-screen.active .headline-pic > img {
+  -webkit-animation: whackEmAll 1s ease-in-out;
+  -moz-animation: whackEmAll 1s ease-in-out;
+  animation: whackEmAll 1s ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-iteration-count: infinite; }
+
+@-webkit-keyframes whackEmAll {
+  0% {
+    -webkit-transform: scale(0.99); }
+  50% {
+    -webkit-transform: scale(1.01); }
+  100% {
+    -webkit-transform: scale(0.99); } }
+@-moz-keyframes whackEmAll {
+  0% {
+    -moz-transform: scale(0.99); }
+  50% {
+    -moz-transform: scale(1.01); }
+  100% {
+    -moz-transform: scale(0.99); } }
+@keyframes whackEmAll {
+  0% {
+    -webkit-transform: scale(0.99);
+    -moz-transform: scale(0.99);
+    -ms-transform: scale(0.99);
+    -o-transform: scale(0.99);
+    transform: scale(0.99); }
+  50% {
+    -webkit-transform: scale(1.01);
+    -moz-transform: scale(1.01);
+    -ms-transform: scale(1.01);
+    -o-transform: scale(1.01);
+    transform: scale(1.01); }
+  100% {
+    -webkit-transform: scale(0.99);
+    -moz-transform: scale(0.99);
+    -ms-transform: scale(0.99);
+    -o-transform: scale(0.99);
+    transform: scale(0.99); } }
+.kill-pets > div, .save-pets > div {
+  position: relative !important; }
+.kill-pets .headline, .save-pets .headline {
+  padding-top: 60px;
+  font-family: Veneer-Three;
+  font-size: 4em;
+  color: #ffffff; }
+.kill-pets .subheadline, .save-pets .subheadline {
+  width: 50%;
+  font-family: Arial, sans-serif;
+  font-size: 2em;
+  color: #ffffff;
+  margin: 0 auto; }
+.kill-pets .instruction-points, .save-pets .instruction-points {
+  font-family: Veneer-Three; }
+  .kill-pets .instruction-points > div, .save-pets .instruction-points > div {
+    display: inline-block; }
+  .kill-pets .instruction-points div, .save-pets .instruction-points div {
+    color: #ffffff;
+    font-size: 1.2em; }
+  .kill-pets .instruction-points .points, .save-pets .instruction-points .points {
+    color: #82CCB6;
+    font-size: 2em; }
+.kill-pets .button-wrapper, .save-pets .button-wrapper {
+  margin-top: 50px; }
+
+.kill-commissioner > div, .save-commissioner > div {
+  position: relative; }
+.kill-commissioner .subheadline, .save-commissioner .subheadline {
+  font-family: Veneer-Three;
+  font-size: 4em;
+  color: #ffffff;
+  margin: 0 auto; }
+.kill-commissioner .subheadline2, .save-commissioner .subheadline2 {
+  width: 60%;
+  font-family: Arial, sans-serif;
+  font-size: 2em;
+  color: #ffffff;
+  margin: 0 auto; }
+.kill-commissioner .button-wrapper, .save-commissioner .button-wrapper {
+  margin-top: 50px; }
+
+.kill-score > div, .save-score > div {
+  position: relative; }
+.kill-score .headline, .save-score .headline {
+  padding-top: 150px;
+  font-family: Arial, sans-serif;
+  font-size: 3em;
+  color: #ffffff; }
+.kill-score .score, .save-score .score {
+  margin-top: -40px;
+  margin-bottom: 10px;
+  font-family: Veneer-Three;
+  font-size: 6em;
+  color: #ffffff; }
+.kill-score .subheadline, .save-score .subheadline {
+  width: 50%;
+  font-family: Arial, sans-serif;
+  font-size: 2em;
+  color: #ffffff;
+  margin: 0 auto; }
+.kill-score .subheadline2, .save-score .subheadline2 {
+  width: 80%;
+  font-family: Arial, sans-serif;
+  font-size: 2em;
+  color: #82CCB6;
+  margin: 0 auto; }
+.kill-score .button-wrapper, .save-score .button-wrapper {
+  margin-top: 30px; }
+
+.share > div {
+  position: relative; }
+.share .bodytext {
+  width: 75%;
+  line-height: 1.6em;
+  padding-top: 100px;
+  text-align: left;
+  font-family: Arial, sans-serif;
+  font-size: 1.3em;
+  color: #ffffff;
+  margin: 0px auto; }
+.share .learn-more {
+  margin-top: 50px; }
+.share .button-wrapper {
+  margin-top: 50px; }
+
+.col-4 {
+  width: 20%;
+  overflow: hidden; }
+  .col-4 .img-wrapper {
+    height: 229px;
+    width: 315px;
+    margin-left: -53px;
+    text-align: left; }
+  .col-4 img {
+    position: absolute; }
+
+.offset-col-2 {
+  margin-left: 12.5%; }
 
 /*# sourceMappingURL=custom.css.map */
